[tool.poetry]
name = "cepstral-smoothing"
version = "0.1.0"
description = ""
authors = ["Roland Siegbert <roland@siegbert.info>"]
readme = "README.md"
packages = [{include = "cepstral_smoothing"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.24.2"
scipy = "^1.10.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
